# birthday_bot

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  health.py  main.py
app/bot/: routers.py
app/bot/handlers/: admin_users.py  birthday_flow.py  channel_settings.py  prompts.py  ready_posts.py  start.py
app/bot/keyboards/: inline.py  main_menu.py
app/bot/middlewares/: auth.py  db.py
app/bot/states/: admin.py  birthday.py  prompts.py
app/database/: models.py  session.py
app/database/repositories/: audit_logs.py  posts.py  prompts.py  settings.py  users.py
app/services/: daily_digest.py  image_generation.py  post_builder.py  post_publication.py  prompt_renderer.py  scheduler.py  text_generation.py
app/utils/: dates.py  validators.py
migrations/: env.py
tests/: test_dates.py  test_prompt_renderer.py  test_text_generation.py
