[project]
name = "birthday-bot"
version = "0.1.0"
description = "Telegram bot for corporate birthday greetings"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4",
  "alembic>=1.13,<2",
  "apscheduler>=3.10,<4",
  "asyncpg>=0.29,<1",
  "greenlet>=3,<4",
  "httpx>=0.27,<1",
  "openai>=1.50,<2",
  "pydantic-settings>=2.5,<3",
  "redis>=5,<6",
  "sqlalchemy[asyncio]>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

